--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -502,7 +502,7 @@
                                 <button 
                                 v-for="(group, index) in groupedEpisodes" 
                                 @click="handleEpisodeGroupChange(index)" 
-                                :class="['px-3 py-1 rounded', activeTab.episodes === index ? 'bg-blue-500 text-white' : 'bg-gray-700']">
+                                :class="['px-3 py-1 rounded transition-all duration-100 active:scale-90', activeTab.episodes === index ? 'bg-blue-500 text-white' : 'bg-gray-700']">
                                 {{ group.range }}
                             </button>                            
                             </div>
@@ -517,14 +517,14 @@
                                     <button 
                                         v-for="episode in groupedEpisodes[activeTab.episodes]?.items" 
                                         @click="selectEpisode(episode)" 
-                                        class="bg-blue-500 text-white p-2 rounded hover:bg-green-500">
+                                        class="bg-blue-500 text-white p-2 rounded hover:bg-green-500 transition-all duration-100 active:scale-90">
                                         {{ episode.EpisodeNumber }}
                                     </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <div class="flex items-center px-4">
                                         <div class="w-8 flex justify-start">
-                                            <button :disabled="!hasNextEpisode" @click="navigateToNextEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button :disabled="!hasNextEpisode" @click="navigateToNextEpisode(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -532,7 +532,7 @@
                                             <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
                                         </div>
                                         <div class="w-8 flex justify-end">
-                                            <button :disabled="!hasPreviousEpisode" @click="navigateToPreviousEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button :disabled="!hasPreviousEpisode" @click="navigateToPreviousEpisode(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -543,7 +543,7 @@
                                         <button
                                             :disabled="video.status === 'success' || video.status === 'ratelimiting'"
                                             @click="sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index, video.IntroductionTime, video.StartStoryTime, video.EpisodeSuspenseTime, video.StartSongTime, video.ChapterOneTime, video.ChapterTwoTime, video.EndSongTime, video.ChapterThreeTime, video.NextEpisodeTeaserTime, video.NextEpisodeHintTime)"
-                                            class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-green-500 flex items-center justify-center shadow-md disabled:opacity-50"
+                                            class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-green-500 flex items-center justify-center shadow-md disabled:opacity-50 transition-all duration-100 active:scale-90"
                                             :class="{ 'opacity-50 cursor-not-allowed': video.status === 'ratelimiting' }">
                                             <span v-if="video.status === 'ratelimiting'">{{ video.Resolution }} ({{ video.Size }} MB)</span>
                                             <span v-else>{{ video.Resolution }} ({{ video.Size }} MB)</span>
@@ -596,7 +596,7 @@
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <div class="flex items-center px-4">
                                         <div class="w-8 flex justify-start">
-                                            <button :disabled="!hasNextMovie" @click="navigateToNextMovie(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button :disabled="!hasNextMovie" @click="navigateToNextMovie(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -604,7 +604,7 @@
                                             <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
                                         </div>
                                         <div class="w-8 flex justify-end">
-                                            <button :disabled="!hasPreviousMovie" @click="navigateToPreviousMovie(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button :disabled="!hasPreviousMovie" @click="navigateToPreviousMovie(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -615,7 +615,7 @@
                                         <button
                                             :disabled="video.status === 'success' || video.status === 'ratelimiting'"
                                             @click="sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index, video.IntroductionTime, video.StartStoryTime, video.EpisodeSuspenseTime, video.StartSongTime, video.ChapterOneTime, video.ChapterTwoTime, video.EndSongTime, video.ChapterThreeTime, video.NextEpisodeTeaserTime, video.NextEpisodeHintTime)"
-                                            class="bg-amber-700 text-white px-6 py-2 rounded hover:bg-green-500 flex items-center justify-center shadow-md disabled:opacity-50"
+                                            class="bg-amber-700 text-white px-6 py-2 rounded hover:bg-green-500 flex items-center justify-center shadow-md disabled:opacity-50 transition-all duration-100 active:scale-90"
                                             :class="{ 'opacity-50 cursor-not-allowed': video.status === 'ratelimiting' }">
                                             <span v-if="video.status === 'ratelimiting'">{{ video.Resolution }} ({{ video.Size }} MB)</span>
                                             <span v-else>{{ video.Resolution }} ({{ video.Size }} MB)</span>
@@ -668,7 +668,7 @@
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <div class="flex items-center px-4">
                                         <div class="w-8 flex justify-start">
-                                            <button :disabled="!hasNextManga" @click="navigateToNextManga(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button :disabled="!hasNextManga" @click="navigateToNextManga(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -676,7 +676,7 @@
                                             <span class="text-lg font-bold">{{ selectedManga.MangaNumber }}</span>
                                         </div>
                                         <div class="w-8 flex justify-end">
-                                            <button :disabled="!hasPreviousManga" @click="navigateToPreviousManga(); resetStatusForEpisodeManga();resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button :disabled="!hasPreviousManga" @click="navigateToPreviousManga(); resetStatusForEpisodeManga();resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                             </button>
                                         </div>
