--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5312,8 +5312,8 @@
                                 <div class="flex space-x-2">
                                     <!-- Next Episode Button -->
                                     <button 
-                                        v-if="nextEpisodeExists" 
-                                        :disabled="!selectedEpisode.EpisodeParts || !nextEpisodeExists" 
+                                        v-if="selectedEpisode.EpisodeParts" 
+                                        :disabled="!nextEpisodeExists" 
                                         @click="fetchNextEpisode" 
                                         class="focus:outline-none ml-12 disabled:opacity-50 disabled:cursor-not-allowed"
                                     >
@@ -5322,8 +5322,8 @@
                                     
                                     <!-- Previous Episode Button -->
                                     <button 
-                                        v-if="previousEpisodeExists" 
-                                        :disabled="!selectedEpisode.EpisodeParts || !previousEpisodeExists" 
+                                        v-if="selectedEpisode.EpisodeParts" 
+                                        :disabled="!previousEpisodeExists" 
                                         @click="fetchPreviousEpisode" 
                                         class="focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed"
                                     >
