--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5722,7 +5722,10 @@
                             transition-all duration-100 active:bg-blue-800 active:scale-90">
                     السابق
                 </button>
+            </div>
 
+            <div class="text-center font-bold justify-center my-4">
+                <span>{{ currentPage }}/{{ totalPages }}</span>
             </div>
 
             <!-- Page Size Controls (Right) -->
