--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5717,7 +5717,7 @@
 
                 <button @click="prevPage" 
                         :disabled="currentPage === 1"
-                        class="bg-blue-700 text-white font-bold px-3 py-3 rounded 
+                        class="bg-blue-700 text-white font-bold px-4 py-2 rounded 
                             hover:bg-blue-500 disabled:opacity-50 disabled:cursor-not-allowed
                             transition-all duration-100 active:bg-blue-800 active:scale-90">
                     السابق
@@ -5729,7 +5729,7 @@
             </div>
 
             <!-- Page Size Controls (Right) -->
-            <div class="text-center font-bold justify-center mt-6">
+            <div class="text-center font-bold justify-center">
                 <label class="inline-flex items-center mx-1">
                     <input type="radio" v-model="pageSize" :value="5" class="form-radio text-blue-500 mx-1" />
                     <span class="ml-2">5</span>
