--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14591,8 +14591,8 @@
                             throw new Error("Telegram Error:\n" + (data.description || text));
                         }
                     } catch (error) {
-                        console.error("sendVideoResponse failed:", error);
-                        throw new Error(`sendVideoResponse failed:\n${error.message}`);
+                        console.error(error);
+                        throw new Error(error.message);
                     }
                 },
                 
