--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14587,7 +14587,7 @@
                             throw new Error("Invalid JSON response from Worker:\n" + text);
                         }
 
-                        if (!data.ok) {
+                        if (!response.ok) {
                             throw new Error("Telegram Error:\n" + (data.description || text));
                         }
                     } catch (error) {
@@ -14619,7 +14619,7 @@
                             throw new Error("Invalid JSON response from Worker:\n" + text);
                         }
 
-                        if (!data.ok) {
+                        if (!response.ok) {
                             throw new Error("Telegram Error:\n" + (data.description || text));
                         }
                     } catch (error) {
