--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14588,14 +14588,16 @@
                         }
 
                         if (!response.ok) {
-                            throw new Error("Telegram Error:\n" + (data.description || text));
+                            const status = data?.status || response.status;
+                            throw new Error(`Telegram Error: (${status})\n` + (data.description || text));
                         }
+
                     } catch (error) {
                         console.error(error);
                         throw new Error(error.message);
                     }
                 },
-                
+
                 async sendMangaResponse(chatId, fileId, caption) {
                     const payload = new URLSearchParams();
                     payload.append("method", "sendDocument");
@@ -14620,8 +14622,10 @@
                         }
 
                         if (!response.ok) {
-                            throw new Error("Telegram Error:\n" + (data.description || text));
+                            const status = data?.status || response.status;
+                            throw new Error(`Telegram Error: (${status})\n` + (data.description || text));
                         }
+
                     } catch (error) {
                         console.error(error);
                         throw new Error(error.message);
