--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -834,7 +834,7 @@
                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png" alt="Close" class="h-8 w-8"/>
                             </button>
                             تصفية موسعة 
-                            <span class="text-red-500 font-bold text-lg">({{ totalEpisodes }})</span>
+                            <span class="text-red-500 font-bold text-base">({{ totalEpisodes }})</span>
                     
                             <!-- Reset Button (Refresh Icon with Image) -->
                             <button 
